[project]
name = "netobs-hub"
version = "0.1.0"
description = "Org-level landing page for network-observability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[dependency-groups]
docs = [
  "mkdocs-material>=9.5,<10",
  "pymdown-extensions>=10.0",
]

[tool.uv]
package = false
